<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context="com.andreakim.concertconcierge.ConcertDetailActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:id="@+id/card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        card_view:cardCornerRadius="5dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.andreakim.concertconcierge.ConcertDetailActivity">

            <ImageView
                android:id="@+id/concert_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:src="@drawable/concerttwo" />
            <TextView
                android:id="@+id/concert_txtview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/concert_image"
                android:padding="6dp"
                android:text="@string/concert_name"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/concert_txtview_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/concert_txtview_name"
                android:padding="6dp"
                android:text="@string/concert_time"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/concert_txtcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/concert_txtview_time"
                android:padding="6dp"
                android:text="City"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/concert_txtview_venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/concert_txtcity"
                android:padding="6dp"
                android:text="@string/concert_venue"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/concert_txtUri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/concert_txtview_venue"
                android:padding="6dp"
                android:text="URi"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/concert_txtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/concert_txtview_venue"
                android:layout_marginStart="32dp"
                android:layout_toRightOf="@+id/concert_txtUri"
                android:padding="6dp"
                android:text="@string/age"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/weather_card"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        card_view:cardCornerRadius="5dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/relLayoutMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.andreakim.concertconcierge.ConcertDetailActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/map"/>
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.MapFragment"
                cameraZoom="15"
                liteMode="true"
                mapType="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>





<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/card_item"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="24dp"
    android:background="@drawable/weather"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="5dp">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather"
    tools:context="com.andreakim.concertconcierge.ConcertDetailActivity">

            <TextView
                android:id="@+id/weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="6dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/weather_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="6dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
</RelativeLayout>
</android.support.v7.widget.CardView>


</RelativeLayout>



